; ModuleID = '/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_cron.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_cron.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@master_flag = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cron() #0 {
  %1 = load i32, i32* @master_flag, align 4
  %2 = icmp eq i32 %1, -1
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = call i32 (...) @getppid()
  %5 = icmp eq i32 %4, 1
  br i1 %5, label %6, label %8

6:                                                ; preds = %3
  %7 = call i32 (...) @turn_sigterm_on()
  br label %8

8:                                                ; preds = %6, %3, %0
  ret void
}

declare dso_local i32 @getppid(...) #1

declare dso_local i32 @turn_sigterm_on(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
